# fuzzy-carnival

./: .gitignore  Cargo.toml
apr/: Cargo.toml
apr/src/: asym.rs  cmd.rs  features.rs  flags.rs  frame.rs  homekit.rs  host.rs  keys.rs  kit.rs  lib.rs  particulars.rs  receiver.rs  rtsp.rs  serdis.rs  server.rs  session.rs  shutdown.rs  tests.rs  util.rs
apr/src/cmd/: get.rs
apr/src/flags/: feature.rs  mod.rs  status.rs
apr/src/homekit/: auth.rs  cipher.rs  fairplay.rs  helper.rs  info.rs  setup.rs  srp.rs  states.rs  tags.rs  tests.rs  tlv.rs  verify.rs
apr/src/homekit/auth/: setup.rs  verify.rs
apr/src/homekit/srp/: groups.rs
apr/src/homekit/tests/: homekit.rs  srp.rs
apr/src/kit/: auth.rs  cipher.rs  codec.rs  conn.rs  fairplay.rs  helper.rs  info.rs  methods.rs  msg.rs  setup.rs  states.rs  tags.rs  tests.rs
apr/src/kit/auth/: setup.rs  srp.rs  verify.rs
apr/src/kit/methods/: fairplay.rs  info.rs  peers.rs  rateanchor.rs  setup.rs
apr/src/kit/msg/: parts.rs
apr/src/kit/ptp/: clock.rs  codec.rs  consts.rs  enums.rs  foreign.rs  header.rs  message.rs  metadata.rs  mod.rs  protocol.rs  state.rs  tests.rs  tlv.rs  util.rs
apr/src/kit/tests/: kit.rs  msgs.rs  srp.rs
apr/src/rtsp/: codec.rs  header.rs  method.rs  msg.rs  msgs.rs  request.rs  status.rs
extra/ref/: headers.txt  pairing.txt  qualifier.cpp
extra/ref/mdns/: service_example.txt
extra/ref/v2/: .gitignore
extra/run/: .gitignore
extra/test-data/rtsp/: .gitignore
extra/test-data/text/: alice.txt
pierre/: Cargo.toml
pierre/src/: main.rs
