# Rusty Pierre
#
# Copyright 2023 Tim Hughey
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http:#www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
authors = ["Tim Hughey"]
edition = "2021"
name = "apr"
version = "0.1.0"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/TimHughey/fuzzy-carnival.git"


[[bin]]
name = "pierre2"
path = "src/bin/pierre2.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
alkali = { version = ">=0.3.0", features = ["hazmat"] }
anyhow = "1.0"
arrayvec = ">=0.7.4"
async-stream = "0.3.0"
atoi = ">=2.0.0"
bincode = ">=1.3.3"
bitflags = ">=2.3.3"
bitstring = "0.1.2"
bstr = ">=0.1.6"
bytes = "1"
chacha20poly1305 = ">=0.10.1"
curve25519-dalek = { version = ">= 4.0, < 4.2", features = ["serde", "digest"] }
der-parser = "8.2.0"
derive-new = ">=0.5.0"
ed25519-compact = "2.0.4"
ed25519-dalek = { version = ">=2.0.0", features = ["hazmat", "serde"] }
futures = { version = "0.3.0", features = ["thread-pool"] }
futures-core = "0.3.28"
futures-io = { version = "0.3.0", optional = true }
futures-sink = "0.3.28"
futures-util = { version = "0.3.0", optional = true }
gethostname = ">=0.4.3"
git-version = ">=0.3.5"
hex = "0.4.3"
hmac-sha256 = "1.1.7"
indexmap = ">=2.0.0"
lazy_static = ">=1.4.0"
mdns-sd = { version = ">=0.7.4" }
network-interface = ">=1.0.1"
num-bigint = "0.4.4"
once_cell = ">=0.1.18"
plist = ">=0.1.5"
pretty-hex = ">=0.3.0"
rand = "0.8.5"
serde_derive = ">=1.0.173"
sha2 = "0.10.7"
srp = "0.6.0"
thiserror = ">=1.0"
tinyvec = ">=1.6.0"
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["full"] }
tokio-util = { version = ">=0.7.8", features = ["full"] }
tracing = "0.1.34"
tracing-subscriber = { version = "0.3.11", features = ["env-filter"] }
uuid = { version = ">=1.4.1", features = ["v4"] }
x25519-dalek = { version = ">=2.0.0", features = ["getrandom"] }
# asn1-rs = { version = "0.5.2", features = ["bits"] }
# Integration between the tracing crate and the opentelemetry crate
# tracing-opentelemetry = { version = "0.19.0", optional = true }

# Implements the types defined in the OTel spec
# opentelemetry = { version = "0.19.0", optional = true }

[features]
# otel = ["dep:opentelemetry", "dep:tracing-opentelemetry"]
