# Rusty Pierre
#
# Copyright 2023 Tim Hughey
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http:#www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
authors = ["Tim Hughey"]
edition = "2021"
name = "apr"
version = "0.1.0"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/TimHughey/fuzzy-carnival.git"

[[bin]]
name = "pierre3"
path = "src/bin/pierre3.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#bnum = { version = "~0.9" }
alkali = { version = ">=0.3.0", features = ["hazmat"] }
anyhow = "1.0"
async-stream = "0.3.0"
base16ct = "0.2.0"
bitflags = ">=2.4.1"
bstr = ">=0.1.6"
bytes = "1"
chacha20poly1305 = { version = ">=0.10.1", features = [] }
chrono = { version = "~0.4.31" }
crypto-bigint = { version = ">=0.5.3", features = ["generic-array", "rand_core"] }
digest = ">=0.10.7"
ed25519-dalek = { version = ">=2.0.0", features = ["hazmat", "serde"] }
env_logger = "*"
futures = { version = "0.3.0", features = ["thread-pool"] }
futures-core = "0.3.28"
futures-io = { version = "0.3.0", optional = true }
futures-sink = "0.3.28"
futures-util = { version = "0.3.0", optional = true }
gethostname = ">=0.4.3"
git-version = ">=0.3.5"
hex = "0.4.3"
hmac-sha256 = "1.1.7"
hmac-sha512 = "1.1.5"
indexmap = ">=2.0.0"
mdns-sd = { version = ">=0.7.4" }
network-interface = ">=1.0.1"
num = "0.4.1"
num-bigint = { version = "0.4.4", features = ["rand"] }
num-traits = ">=0.2.16"
once_cell = ">=0.1.18"
plist = ">=0.1.5"
pretty-hex = ">=0.3.0"
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
serde_derive = ">=1.0.173"
test-log = { version = ">=0.2.12", features = ["trace"] }
thiserror = "1.0.50"
time = { version = "~0.3.30", features = ["formatting"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["full"] }
tokio-util = { version = ">=0.7.8", features = ["full"] }
tracing = "0.1.34"
tracing-subscriber = { version = "0.3.11", features = ["env-filter", "fmt"] }
uuid = { version = ">=1.4.1", features = ["v4"] }
x25519-dalek = { version = ">=2.0.0", features = ["getrandom"] }

[dependencies.aead]
# for chacha20poly1305
version = "~0.5"
features = ["bytes"]

# arrayvec = ">=0.7.4"
# asn1-rs = { version = "0.5.2", features = ["bits"] }
# atoi = ">=2.0.0"
# bincode = ">=1.3.3"
# bitstring = "0.1.2"
# bnum = { version = "0.9.0", features = ["rand"] }
# der-parser = "8.2.0"
# derive-new = ">=0.5.0"
# ed25519-compact = "2.0.4"
# srp = { version = "0.6.0" }
# thiserror = ">=1.0"
# tinyvec = ">=1.6.0"

# Integration between the tracing crate and the opentelemetry crate
# tracing-opentelemetry = { version = "0.19.0", optional = true }

# Implements the types defined in the OTel spec
# opentelemetry = { version = "0.19.0", optional = true }

[dev-dependencies]
tracing-test = "~0.2"
test-log = { version = ">=0.2.12", features = ["trace"] }
tracing = { version = ">=0.1.34" }
tracing-subscriber = { version = ">=0.3.11", features = ["env-filter", "fmt"] }

[features]
# otel = ["dep:opentelemetry", "dep:tracing-opentelemetry"]
